# d4-pieces

./: .gitignore  CMakeLists.txt  LICENSE  Piece.cpp  Piece.hpp  README.md  Shape.cpp  Shape.hpp  compile.sh  cuda.sh  enum.cpp  known.cpp  main.cpp  wasm.cpp
bmark/: bins.cu  dedup.cu  kernel.cu  kernel_bmark.cu  kernels.txt  push_nm.cu  radix.cu  record.cu  sn.cu  sorter.cpp
src/: Group.cpp  Group.hpp  Piece.cpp  Piece.hpp  Piece.inl  Shape.cpp  Shape.hpp  board.hpp  device.cu  device.h  enum.cpp  frow.cpp  frow.cu  frow.h  growable.cu  growable.cuh  growable.h  kernel.cu  kernel.cuh  kernel.h  kernel_impl.cu  known.cpp  known.hpp  known1.cpp  known2.cpp  main.cpp  naming.cpp  naming.hpp  naming.inl  record.cu  record.cuh  record.h  region.cu  region.h  search.bak.cpp  search.cpp  searcher.cpp  searcher.hpp  searcher_cuda.cpp  searcher_cuda.cu  (+7 more)
website/: .gitignore  package-lock.json
website/public/: index.html  pieces.js  pieces.wasm
website/src/: App.css  App.js  Board.js  Piece.js  PiecePlacement.js  PieceSelector.js  PiecesSelector.js  Solution.js
