cmake_minimum_required(VERSION 3.21)
if(EMSCRIPTEN)
    project(pieces)
else()
    project(pieces LANGUAGES CXX CUDA)
    add_compile_options($<$<COMPILE_LANGUAGE:CUDA>:-arch=sm_86>)
endif()

set(CMAKE_CXX_STANDARD 23)

add_compile_options(-fuse-ld=lld)
add_compile_options(-Wall -Wextra)
add_compile_options(-Werror)
add_compile_options($<$<COMPILE_LANGUAGE:CUDA>:all-warnings>)
add_compile_options(-Wno-parentheses)
add_compile_options(-Wno-missing-field-initializers)
add_compile_options(-Wno-unused-function)
add_compile_options(-Wno-unused-label)
add_compile_options(-Wno-unused-parameter)
add_compile_options(-Wno-unknown-pragmas)
add_compile_options(-Wno-sign-compare)
add_compile_options(-Wno-unused-command-line-argument)
set(CMAKE_SHARED_LINKER_FLAGS "-Wl,--no-undefined")
set(CMAKE_INTERPROCEDURAL_OPTIMIZATION TRUE)
set(CMAKE_EXPORT_COMPILE_COMMANDS YES)

if(EMSCRIPTEN)
    add_executable(pieces src/wasm.cpp src/Piece.cpp src/Shape.cpp src/known.cpp src/Group.cpp)
    target_link_options(pieces PRIVATE -sWASM_BIGINT)
    target_link_options(pieces PRIVATE -sASSERTIONS)
    target_link_options(pieces PRIVATE -sALLOW_MEMORY_GROWTH=1)
    target_link_options(pieces PRIVATE -sENVIRONMENT=web)
    target_link_options(pieces PRIVATE -sMODULARIZE=1)
    target_link_options(pieces PRIVATE -sEXPORT_NAME=Pieces)
    target_link_libraries(pieces PRIVATE embind)

    add_executable(profile src/main.cpp src/Piece.cpp src/Shape.cpp src/Group.cpp)
    target_compile_options(profile PRIVATE -g)
    target_link_options(profile PRIVATE -sWASM_BIGINT)
    target_link_options(profile PRIVATE --profiling)
    target_link_options(profile PRIVATE -sWASM=1)
    target_link_options(profile PRIVATE -sSTANDALONE_WASM=1)
    target_link_options(profile PRIVATE -sENVIRONMENT=shell)
    target_link_options(profile PRIVATE -sMODULARIZE=0)
else()
    add_executable(search
        src/search.cpp
        src/searcher.cpp
        src/searcher_cuda.cu
        src/naming.cpp
        src/Piece.cpp src/Shape.cpp src/Group.cpp
        src/known1.cpp src/known2.cpp)
    target_link_libraries(search PRIVATE boost_thread)
    target_link_libraries(search PRIVATE mimalloc)
    target_compile_options(search PRIVATE -g -O3 -march=native)
    set_target_properties(search PROPERTIES CUDA_SEPARABLE_COMPILATION ON)

    add_executable(enum src/enum.cpp src/Shape.cpp src/Group.cpp)
    target_compile_options(enum PRIVATE -g -O3)
endif()
